Update for ST4 (#1672)
- Remove ST3 example configs.
- Redirect to install instructions of various new ST4 packages.
- Point ST3 users to lsp.readthedocs.io