@@ -9,6 +9,8 @@ If there are no setup steps for a language server on this page, but a [language 
 !!! tip "We recommend installing [LSP-json](https://packagecontrol.io/packages/LSP-json)."
     [LSP-json](https://packagecontrol.io/packages/LSP-json) provides completions and diagnostics when editing JSON files that adhere to a JSON schema.
 
+!!! info "For legacy ST3 docs, see [lsp.readthedocs.io](https://lsp.readthedocs.io)."
+
 
 ## Angular
 
@@ -24,61 +26,13 @@ See the dedicated [C/C++ guide](guides/cplusplus.md) for using ccls or clangd.
 
 ## C\#
 
-1. Download a .NET SDK. The ".NET Core" SDK is known to *not* work on macOS.
-2. If on macOS/Linux, download the Mono Runtime in order to be able to run .NET executables and DLLs.
-3. Download [omnisharp](https://github.com/OmniSharp/omnisharp-roslyn/releases).
-4. Open `Preferences > Package Settings > LSP > Settings` and add the `"omnisharp"` client configuration to the `"clients"`:
-
-=== "Sublime Text 4"
-    ```json
-    {
-        "clients": {
-            "omnisharp": {
-                "enabled": true,
-                "command": [
-                    "mono", // mono is only necessary for macOS/Linux
-                    "/home/tb/prebuilt/omnisharp/OmniSharp.exe",
-                    "-lsp"
-                ],
-                "env": {
-                    // This may or may not be necessary, please report your findings!
-                    "FrameworkPathOverride": "/path/to/omnisharp/.msbuild/Current"
-                },
-                "selector": "source.cs"
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "omnisharp": {
-                "enabled": true,
-                "command": [
-                    "mono", // mono is only necessary for macOS/Linux
-                    "/home/tb/prebuilt/omnisharp/OmniSharp.exe",
-                    "-lsp"
-                ],
-                "env": {
-                    // This may or may not be necessary, please report your findings!
-                    "FrameworkPathOverride": "/path/to/omnisharp/.msbuild/Current"
-                },
-                "languageId": "csharp",
-                "scopes": ["source.cs"],
-                "syntaxes": ["Packages/C#/C#.sublime-syntax"]
-            }
-        }
-    }
-    ```
+Follow installation instructions on [LSP-OmniSharp](https://github.com/sublimelsp/LSP-OmniSharp).
 
 ## Clojure
 
 1. Download [clojure-lsp](https://github.com/snoe/clojure-lsp#installation).
 2. Open `Preferences > Package Settings > LSP > Settings` and add the `"clojure-lsp"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -86,22 +40,6 @@ See the dedicated [C/C++ guide](guides/cplusplus.md) for using ccls or clangd.
                 "enabled": true,
                 "command": ["java", "-jar", "/PATH/TO/clojure-lsp"], // Update the PATH
                 "selector": "source.clojure",
-                "initializationOptions": {}
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "clojure-lsp": {
-                "enabled": true,
-                "command": ["java", "-jar", "/PATH/TO/clojure-lsp"], // Update the PATH
-                "languageId": "clojure",
-                "scopes": ["source.clojure"],
-                "syntaxes": ["Packages/Clojure/Clojure.sublime-syntax"],
                 "initializationOptions": {}
             }
         }
@@ -119,7 +57,6 @@ Follow installation instructions on [LSP-css](https://github.com/sublimelsp/LSP-
 1. Install the [D Language Server](https://github.com/d-language-server/dls#installation).
 2. Open `Preferences > Package Settings > LSP > Settings` and add the `"dls"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -127,21 +64,6 @@ Follow installation instructions on [LSP-css](https://github.com/sublimelsp/LSP-
                 "enabled": true,
                 "command": ["/PATH/TO/DLS_EXECUTABLE"], // Update the PATH
                 "selector": "source.d"
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "dls": {
-                "enabled": true,
-                "command": ["/PATH/TO/DLS_EXECUTABLE"], // Update the PATH
-                "languageId": "d",
-                "scopes": ["source.d"],
-                "syntaxes": ["Packages/D/D.sublime-syntax"]
             }
         }
     }
@@ -168,7 +90,6 @@ Follow installation instructions on [LSP-elm](https://github.com/sublimelsp/LSP-
 1. Install the [Erlang Language Server](https://github.com/erlang-ls/erlang_ls).
 2. Open `Preferences > Package Settings > LSP > Settings` and add the `"erlang-ls"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -181,57 +102,13 @@ Follow installation instructions on [LSP-elm](https://github.com/sublimelsp/LSP-
     }
     ```
 
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "erlang-ls": {
-                "enabled": true,
-                "command": [ "/path/to/my/erlang_ls", "--transport", "stdio" ],
-                "languageId": "erlang",
-                "scopes": [ "source.erlang" ],
-                "syntaxes": ["Packages/Erlang/Erlang.sublime-syntax"]
-            }
-        }
-    }
-    ```
-
 ## ESLint
 
 Follow installation instructions on [LSP-eslint](https://github.com/sublimelsp/LSP-eslint).
 
 ## Flow
 
-1. Install [flow](https://github.com/facebook/flow#using-flow).
-2. Open `Preferences > Package Settings > LSP > Settings` and add the `"flow"` client configuration to the `"clients"`:
-
-=== "Sublime Text 4"
-    ```json
-    {
-        "clients": {
-            "flow": {
-                "enabled": true,
-                "command": ["flow", "lsp"],
-                "selector": "source.js | source.js.react"
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "flow": {
-                "enabled": true,
-                "command": ["flow", "lsp"],
-                "languageId": "javascript",
-                "scopes": ["source.js"],
-                "syntaxes": ["Packages/Babel/JavaScript (Babel).sublime-syntax", "Packages/JavaScript/JavaScript.sublime-syntax"]
-            }
-        }
-    }
-    ```
+Follow installation instructions on [LSP-flow](https://github.com/sublimelsp/LSP-flow).
 
 ## Fortran
 
@@ -239,7 +116,6 @@ Follow installation instructions on [LSP-eslint](https://github.com/sublimelsp/L
 2. Install the [Fortran Language Server](https://github.com/hansec/fortran-language-server#installation).
 3. Open `Preferences > Package Settings > LSP > Settings` and add the `"fortls"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -247,24 +123,6 @@ Follow installation instructions on [LSP-eslint](https://github.com/sublimelsp/L
                 "enabled": true,
                 "command": ["fortls"],
                 "selector": "source.modern-fortran | source.fixedform-fortran"
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "fortls": {
-                "enabled": true,
-                "command": ["fortls"],
-                "languageId": "fortran",
-                "scopes": ["source.modern-fortran", "source.fixedform-fortran"],
-                "syntaxes": [
-                    "Packages/Fortran/grammars/FortranModern.sublime-syntax",
-                    "Packages/Fortran/grammars/FortranFixedForm.sublime-syntax"
-                ]
             }
         }
     }
@@ -278,7 +136,6 @@ Follow installation instructions on [LSP-eslint](https://github.com/sublimelsp/L
 1. Install [gopls](https://github.com/golang/tools/blob/master/gopls/README.md#installation).
 2. Open `Preferences > Package Settings > LSP > Settings` and add the `"gopls"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -290,27 +147,6 @@ Follow installation instructions on [LSP-eslint](https://github.com/sublimelsp/L
                     "experimentalWorkspaceModule": false
                 }
             }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "gopls": {
-                "enabled": true,
-                "command": ["gopls"],
-                "languageId": "go",
-                "scopes": ["source.go"],
-                "syntaxes": [
-                    "Packages/Go/Go.sublime-syntax",
-                    "Packages/GoSublime/syntax/GoSublime-Go-Recommended.sublime-syntax"
-                ],
-                "initializationOptions": {
-                    "experimentalWorkspaceModule": false
-                }
-            },
         }
     }
     ```
@@ -328,7 +164,6 @@ Follow installation instructions on [LSP-graphql](https://github.com/sublimelsp/
 1. Install [haskell-language-server](https://github.com/haskell/haskell-language-server).
 2. Open `Preferences > Package Settings > LSP > Settings` and add the `"haskell-language-server"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -341,102 +176,13 @@ Follow installation instructions on [LSP-graphql](https://github.com/sublimelsp/
     }
     ```
 
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "haskell-language-server": {
-                "enabled": true,
-                "command": ["haskell-language-server-wrapper", "--lsp"],
-                "languageId": "haskell",
-                "scopes": ["source.haskell"],
-                "syntaxes": ["Packages/Haskell/Haskell.sublime-syntax"]
-            }
-        }
-    }
-    ```
-
 ## HTML
 
 Follow installation instructions on [LSP-html](https://github.com/sublimelsp/LSP-html).
 
 ## Java
 
-1. Download and extract Eclipse's [jdt-ls](https://download.eclipse.org/jdtls/snapshots/jdt-language-server-latest.tar.gz).
-2. Open `Preferences > Package Settings > LSP > Settings` and add the `"jdtls"` client configuration to the `"clients"`:
-
-
-=== "Sublime Text 4"
-    ```json
-    {
-        "clients": {
-            "jdtls": {
-                "enabled": true,
-                "command": [
-                    "java",
-                    "--add-modules=ALL-SYSTEM",
-                    "--add-opens",
-                    "java.base/java.util=ALL-UNNAMED",
-                    "--add-opens",
-                    "java.base/java.lang=ALL-UNNAMED",
-                    "-Declipse.application=org.eclipse.jdt.ls.core.id1",
-                    "-Dosgi.bundles.defaultStartLevel=4",
-                    "-Declipse.product=org.eclipse.jdt.ls.core.product",
-                    "-Dfile.encoding=UTF-8",
-                    "-DwatchParentProcess={true|false}",  // false on windows, true other OSs
-                    "-noverify",
-                    "-Xmx1G",
-                    "-XX:+UseG1GC",
-                    "-XX:+UseStringDeduplication",
-                    "-jar",
-                    "PATH/TO/jdt-language-server-latest/plugins/org.eclipse.equinox.launcher_*.jar" // 1. replace the PATH/TO with your own 2. replace * with the file version
-                    "-configuration",
-                    "PATH/TO/jdt-language-server-latest/config_{win|mac|linux}", // 1. replace the PATH/TO with your own 2. choose the config folder based on the OS
-                    "-data",
-                    "<TEMP_DIR>/${project_base_name}/jdt_ws" // replace <TEMP_DIR> with the temp folder in your system. macOS: echo $TMPDIR
-                ],
-                "selector": "source.java"
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "jdtls": {
-                "enabled": true,
-                "command": [
-                    "java",
-                    "--add-modules=ALL-SYSTEM",
-                    "--add-opens",
-                    "java.base/java.util=ALL-UNNAMED",
-                    "--add-opens",
-                    "java.base/java.lang=ALL-UNNAMED",
-                    "-Declipse.application=org.eclipse.jdt.ls.core.id1",
-                    "-Dosgi.bundles.defaultStartLevel=4",
-                    "-Declipse.product=org.eclipse.jdt.ls.core.product",
-                    "-Dfile.encoding=UTF-8",
-                    "-DwatchParentProcess={true|false}",  // false on windows, true other OSs
-                    "-noverify",
-                    "-Xmx1G",
-                    "-XX:+UseG1GC",
-                    "-XX:+UseStringDeduplication",
-                    "-jar",
-                    "PATH/TO/jdt-language-server-latest/plugins/org.eclipse.equinox.launcher_*.jar" // 1. replace the PATH/TO with your own 2. replace * with the file version
-                    "-configuration",
-                    "PATH/TO/jdt-language-server-latest/config_{win|mac|linux}", // 1. replace the PATH/TO with your own 2. choose the config folder based on the OS
-                    "-data",
-                    "<TEMP_DIR>/${project_base_name}/jdt_ws" // replace <TEMP_DIR> with the temp folder in your system. macOS: echo $TMPDIR
-                ],
-                "languageId": "java",
-                "scopes": ["source.java"],
-                "syntaxes": ["Packages/Java/Java.sublime-syntax"]
-            }
-        }
-    }
-    ```
+Follow installation instructions on [LSP-jdtls](https://github.com/sublimelsp/LSP-jdtls).
 
 ## JSON
 
@@ -453,7 +199,6 @@ Follow installation instructions on [LSP-json](https://github.com/sublimelsp/LSP
 
 3. Open `Preferences > Package Settings > LSP > Settings` and add the `"julials"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -491,53 +236,12 @@ Follow installation instructions on [LSP-json](https://github.com/sublimelsp/LSP
     }
     ```
 
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "julials": {
-                "enabled": true,
-                "command": ["bash", "PATH_TO_JULIA_SERVER/LanguageServer/contrib/languageserver.sh"], // on Linux/macOS
-              // "command": ["julia", "--startup-file=no", "--history-file=no", "-e", "using Pkg; using LanguageServer; using LanguageServer.SymbolServer; env_path=dirname(Pkg.Types.Context().env.project_file); server=LanguageServer.LanguageServerInstance(stdin,stdout,false,env_path); run(server)"], // on Windows
-                "languageId": "julia",
-                "scopes": ["source.julia"],
-                "syntaxes": ["Packages/Julia/Julia.sublime-syntax"],
-                "settings": {
-                    // Default values from VS Code:
-                    "julia.format.calls": true,      // Format function calls
-                    "julia.format.comments": true,   // Format comments
-                    "julia.format.curly": true,      // Format braces
-                    "julia.format.docs": true,       // Format inline documentation
-                    "julia.format.indent": 4,        // Indent size for formatting
-                    "julia.format.indents": true,    // Format file indents
-                    "julia.format.iterOps": true,    // Format loop iterators
-                    "julia.format.kw": true,         // Remove spaces around = in function keywords
-                    "julia.format.lineends": false,  // [undocumented]
-                    "julia.format.ops": true,        // Format whitespace around operators
-                    "julia.format.tuples": true,     // Format tuples
-                    "julia.lint.call": false,        // Check calls against existing methods (experimental)
-                    "julia.lint.constif": true,      // Check for constant conditionals of if statements
-                    "julia.lint.datadecl": false,    // [undocumented]
-                    "julia.lint.iter": true,         // Check iterator syntax of loops
-                    "julia.lint.lazy": true,         // Check for deterministic lazy boolean operators
-                    "julia.lint.modname": true,      // Check for invalid submodule names
-                    "julia.lint.nothingcomp": false, // [undocumented]
-                    "julia.lint.pirates": true,      // Check for type piracy
-                    "julia.lint.run": true,          // run the linter on active files
-                    "julia.lint.typeparam": true     // Check for unused DataType parameters
-                }
-            }
-        }
-    }
-    ```
-
 ## Kotlin
 
 1. Install the [Kotlin](https://packagecontrol.io/packages/Kotlin) package from Package Control for syntax highlighting.
 2. Install the [Kotlin Language Server](https://github.com/fwcd/KotlinLanguageServer) (requires [building](https://github.com/fwcd/KotlinLanguageServer/blob/master/BUILDING.md) first).
 3. Open `Preferences > Package Settings > LSP > Settings` and add the `"kotlinls"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -555,65 +259,15 @@ Follow installation instructions on [LSP-json](https://github.com/sublimelsp/LSP
     }
     ```
 
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "kotlinls": {
-                "enabled": true,
-                "command": ["PATH/TO/KotlinLanguageServer/build/install/kotlin-language-server/bin/kotlin-language-server.bat"], // Update the PATH
-                "languageId": "kotlin",
-                "scopes": ["source.Kotlin"],
-                "syntaxes": ["Packages/kotlin/Kotlin.tmLanguage"],
-                "settings": {
-                    "kotlin": {
-                        // put your server settings here
-                    }
-                }
-            }
-        }
-    }
-    ```
-
 ## LaTeX
 
-!!! Info "Instructions for Sublime Text 4."
-
 Follow installation instructions on [LSP-TexLab](https://github.com/sublimelsp/LSP-TexLab).
-
----
-
-!!! Info "Instructions for Sublime Text 3."
-
-1. Download the [binary](https://github.com/latex-lsp/texlab/releases).
-2. Open `Preferences > Package Settings > LSP > Settings` and add the `"texlab"` client configuration to the `"clients"`:
-
-```json
-{
-    "clients": {
-        "texlab": {
-            "enabled": true,
-            "command": ["PATH/TO/texlab"], // Update the PATH
-            "languages": [{
-                "languageId": "latex",
-                "document_selector": "text.tex.latex"
-            }, {
-                "languageId": "bibtex",
-                "document_selector": "text.bibtex"
-            }]
-        }
-    }
-}
-```
-
-!!! info "For further requirements see the [TexLab Docs](https://texlab.netlify.com/docs#requirements)."
 
 ## Lisp
 
 1. Install [cc-lsp](https://github.com/cxxxr/cl-lsp) using Roswell.
 2. Open `Preferences > Package Settings > LSP > Settings` and add the `"cc-lsp"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -626,59 +280,9 @@ Follow installation instructions on [LSP-TexLab](https://github.com/sublimelsp/L
     }
     ```
 
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "cc-lsp": {
-                "enabled": true,
-                "command": ["cl-lsp", "stdio"],
-                "languageId": "lisp",
-                "scopes": ["source.lisp"],
-                "syntaxes": ["Packages/Lisp/Lisp.sublime-syntax"]
-            }
-        }
-    }
-    ```
-
 ## Lua
 
-1. Download the [VS Code extension](https://marketplace.visualstudio.com/items?itemName=sumneko.lua).
-2. Open `Preferences > Package Settings > LSP > Settings` and add the `"lua-ls"` client configuration to the `"clients"`:
-
-=== "Sublime Text 4"
-    ```json
-    {
-        "clients": {
-            "lua-ls": {
-                "enabled": true,
-                "command": [
-                    "PATH/TO/sumneko.lua-#.#.#/extension/server/bin/lua-language-server", // Update the PATH
-                    "-E", "PATH/TO/sumneko.lua-#.#.#/extension/server/main.lua"
-                ],
-                "selector": "source.lua"
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "lua-ls": {
-                "enabled": true,
-                "command": [
-                    "PATH/TO/sumneko.lua-#.#.#/extension/server/bin/lua-language-server", // Update the PATH
-                    "-E", "PATH/TO/sumneko.lua-#.#.#/extension/server/main.lua"
-                ],
-                "languageId": "lua",
-                "scopes": ["source.lua"],
-                "syntaxes": ["Packages/Lua/Lua.sublime-syntax"]
-            }
-        }
-    }
-    ```
+Follow installation instructions on [LSP-lua](https://github.com/sublimelsp/LSP-lua).
 
 ## OCaml/Reason
 
@@ -687,7 +291,6 @@ Follow installation instructions on [LSP-TexLab](https://github.com/sublimelsp/L
 3. Open `Preferences > Package Settings > LSP > Settings` and add the `"reason"` client configuration to the `"clients"`:
 
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -695,25 +298,6 @@ Follow installation instructions on [LSP-TexLab](https://github.com/sublimelsp/L
                 "enabled": true,
                 "command": ["PATH/TO/reason-language-server.exe"], // Update the PATH
                 "selector": "source.ocaml | source.reason"
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "reason": {
-                "enabled": true,
-                "command": ["PATH/TO/reason-language-server.exe"], // Update the PATH
-                "languageId": "reason",
-                "scopes": ["source.ocaml", "source.reason"],
-                "syntaxes": [
-                    "Packages/Ocaml/OCaml.sublime-syntax",
-                    "Packages/Reason/Reason.tmLanguage",
-                    "Packages/sublime-reason/Reason.tmLanguage"
-                ]
             }
         }
     }
@@ -737,74 +321,7 @@ Follow installation instructions on [LSP-serenata](https://github.com/Cloudstek/
 
 ## PowerShell
 
-1. Install the [PowerShell](https://packagecontrol.io/packages/PowerShell) package from Package Control for syntax highlighting.
-2. Download and extract the [latest release](https://github.com/PowerShell/PowerShellEditorServices/releases) PowerShellEditorServices.
-3. Make sure PowerShell help files are up to date by running `Update-Help` in the PowerShell console (the one you're using in the command below).
-3. Open `Preferences > Package Settings > LSP > Settings` and add the `"powershell-ls"` client configuration to the `"clients"`:
-
-=== "Sublime Text 4"
-    ```json
-    {
-        "clients": {
-            "powershell-ls": {
-                "enabled": true,
-                "command": [
-                    "powershell", // or pwsh for PowerShell Core
-                    "-NoLogo",
-                    "-NoProfile",
-                    "-NonInteractive",
-                    "-ExecutionPolicy", "Bypass", // Windows only
-                    "-Command", "PATH/TO/PowerShellEditorServices/PowerShellEditorServices/Start-EditorServices.ps1",
-                    "-LogPath", "PATH/TO/pses.log", // specify a path where a logfile should be stored
-                    "-LogLevel", "Normal",
-                    "-SessionDetailsPath", "PATH/TO/session.json", // specify a path where a file for session details should be stored
-                    "-FeatureFlags", "@()",
-                    "-HostName", "'Sublime Text'",
-                    "-HostProfileId", "subl",
-                    "-HostVersion", "1.0.0",
-                    "-AdditionalModules", "@()",
-                    "-BundledModulesPath", "PATH/TO/PowerShellEditorServices",
-                    "-Stdio"
-                ],
-                "selector": "source.powershell"
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "powershell-ls": {
-                "enabled": true,
-                "command": [
-                    "powershell", // or pwsh for PowerShell Core
-                    "-NoLogo",
-                    "-NoProfile",
-                    "-NonInteractive",
-                    "-ExecutionPolicy", "Bypass", // Windows only
-                    "-Command", "PATH/TO/PowerShellEditorServices/PowerShellEditorServices/Start-EditorServices.ps1",
-                    "-LogPath", "PATH/TO/pses.log", // specify a path where a logfile should be stored
-                    "-LogLevel", "Normal",
-                    "-SessionDetailsPath", "PATH/TO/session.json", // specify a path where a file for session details should be stored
-                    "-FeatureFlags", "@()",
-                    "-HostName", "'Sublime Text'",
-                    "-HostProfileId", "subl",
-                    "-HostVersion", "1.0.0",
-                    "-AdditionalModules", "@()",
-                    "-BundledModulesPath", "PATH/TO/PowerShellEditorServices",
-                    "-Stdio"
-                ],
-                "languageId": "powershell",
-                "scopes": ["source.powershell"],
-                "syntaxes": ["Packages/PowerShell/Support/PowershellSyntax.tmLanguage"]
-            }
-        }
-    }
-    ```
-
-!!! info "For more details see this [issue](https://github.com/PowerShell/PowerShellEditorServices/issues/1057)."
+Follow installation instructions on [LSP-PowerShellEditorServices](https://github.com/Cloudstek/LSP-PowerShellEditorServices).
 
 ## Python
 
@@ -822,7 +339,6 @@ pip install 'python-lsp-server[all]'
 
 Make sure you can run `pylsp` in your terminal. If you've installed it into a virtualenv, you might need to override the path to `pylsp` in global LSP settings (Package Settings -> LSP -> Settings):
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -831,22 +347,6 @@ Make sure you can run `pylsp` in your terminal. If you've installed it into a vi
                 "command": ["pylsp"],
                 // "command": ["/Users/mike/.virtualenvs/pylsp-virtual-env/bin/pylsp"], // example path, adjust it for your use case
                 "selector": "source.python"
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "pylsp": {
-                "enabled": true,
-                "command": ["pylsp"],
-                // "command": ["/Users/mike/.virtualenvs/pylsp-virtual-env/bin/pylsp"], // example path, adjust it for your use case
-                "languageId": "python",
-                "scopes": ["source.python"],
-                "syntaxes": ["Packages/Python/Python.sublime-syntax", "Packages/MagicPython/grammars/MagicPython.tmLanguage", "Packages/Djaneiro/Syntaxes/Python Django.tmLanguage"]
             }
         }
     }
@@ -931,7 +431,6 @@ There are multiple options:
 
 2. Open `Preferences > Package Settings > LSP > Settings` and add the `"ruby"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -939,28 +438,6 @@ There are multiple options:
                 "enabled": true,
                 "command": ["solargraph", "stdio"],
                 "selector": "source.ruby | text.html.ruby",
-                "initializationOptions": {
-                    "diagnostics": false
-                }
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "ruby": {
-                "enabled": true,
-                "command": ["solargraph", "stdio"],
-                "languageId": "ruby",
-                "scopes": ["source.ruby", "source.ruby.rails", "text.html.ruby"],
-                "syntaxes": [
-                    "Packages/Ruby/Ruby.sublime-syntax",
-                    "Packages/Rails/Ruby on Rails.sublime-syntax",
-                    "Packages/Rails/HTML (Rails).sublime-syntax"
-                ],
                 "initializationOptions": {
                     "diagnostics": false
                 }
@@ -982,7 +459,6 @@ There are multiple options:
 
 2. Open `Preferences > Package Settings > LSP > Settings` and add the `"sorbet"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -990,25 +466,6 @@ There are multiple options:
                 "enabled": true,
                 "command": ["srb", "tc", "--typed", "true", "--enable-all-experimental-lsp-features", "--lsp", "--disable-watchman"],
                 "selector": "source.ruby | text.html.ruby",
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "sorbet": {
-                "enabled": true,
-                "command": ["srb", "tc", "--typed", "true", "--enable-all-experimental-lsp-features", "--lsp", "--disable-watchman"],
-                "languageId": "ruby",
-                "scopes": ["source.ruby", "source.ruby.rails", "text.html.ruby"],
-                "syntaxes": [
-                    "Packages/Ruby/Ruby.sublime-syntax",
-                    "Packages/Rails/Ruby on Rails.sublime-syntax",
-                    "Packages/Rails/HTML (Rails).sublime-syntax"
-                ],
             }
         }
     }
@@ -1025,7 +482,6 @@ There are multiple options:
 3. Make sure the binary is in your `$PATH`.
 4. Open `Preferences > Package Settings > LSP > Settings` and add the `"rust-analyzer"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -1037,25 +493,6 @@ There are multiple options:
         }
     }
     ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "rust-analyzer": {
-                "enabled": true,
-                "command": ["rust-analyzer"],
-                "languageId": "rust",
-                "scopes": ["source.rust"],
-                "syntaxes": ["Packages/Rust/Rust.sublime-syntax", "Packages/Rust Enhanced/RustEnhanced.sublime-syntax"]
-            }
-        }
-    }
-    ```
-
-### Rust Enhanced
-
-Follow installation instructions on [Rust Enhanced](https://github.com/rust-lang/rust-enhanced).
 
 ## Scala
 
@@ -1071,37 +508,7 @@ Follow installation instructions on [LSP-svelte](https://github.com/sublimelsp/L
 
 ## Swift
 
-1. Install the [Swift](https://packagecontrol.io/packages/Swift) package from Package Control for syntax highlighting.
-2. Install Xcode 11.4 or later and ensure that `xcrun -find sourcekit-lsp` returns the path to sourcekit-lsp.
-3. Open `Preferences > Package Settings > LSP > Settings` and add the `"sourcekit-lsp"` client configuration to the `"clients"`:
-
-=== "Sublime Text 4"
-    ```json
-    {
-        "clients": {
-            "sourcekit-lsp": {
-                "enabled": true,
-                "command": ["xcrun", "sourcekit-lsp"],
-                "selector": "source.swift"
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "sourcekit-lsp": {
-                "enabled": true,
-                "command": ["xcrun", "sourcekit-lsp"],
-                "languageId": "swift",
-                "scopes": ["source.swift"],
-                "syntaxes": ["Packages/Swift/Syntaxes/Swift.tmLanguage"]
-            }
-        }
-    }
-    ```
+Follow installation instructions on [LSP-SourceKit](https://github.com/sublimelsp/LSP-SourceKit).
 
 ## TAGML
 
@@ -1113,7 +520,6 @@ Follow installation instructions on [LSP-tagml](https://github.com/HuygensING/LS
 2. Download [terraform-lsp](https://github.com/juliosueiras/terraform-lsp/releases) binary and make it available in your PATH.
 3. Open `Preferences > Package Settings > LSP > Settings` and add the `"terraform"` client configuration to the `"clients"`:
 
-=== "Sublime Text 4"
     ```json
     {
         "clients": {
@@ -1121,21 +527,6 @@ Follow installation instructions on [LSP-tagml](https://github.com/HuygensING/LS
                 "enabled": true,
                 "command": ["terraform-lsp"],
                 "selector": "source.terraform"
-            }
-        }
-    }
-    ```
-
-=== "Sublime Text 3"
-    ```json
-    {
-        "clients": {
-            "terraform": {
-                "enabled": true,
-                "command": ["terraform-lsp"],
-                "languageId": "terraform",
-                "scopes": ["source.terraform"],
-                "syntaxes":  ["Packages/Terraform/Terraform.sublime-syntax"]
             }
         }
     }
